releases/armi/v0.2.1/_sources/gallery/framework/run_chartOfNuclides.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/framework/run_chartOfNuclides.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_framework_run_chartOfNuclides.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_framework_run_chartOfNuclides.py:


Plot a chart of the nuclides
============================

Use the nuclide directory of ARMI to plot a chart of the nuclides
coloring the squares with the natural abundance.

.. admonition:: More details

    Our :ref:`extended tutorial for nuclides </tutorials/nuclide_demo.ipynb>` and
    detailed :py:mod:`nucDirectory docs <armi.nucDirectory>` may also be of interest.

.. GENERATED FROM PYTHON SOURCE LINES 26-45



.. image:: /gallery/framework/images/sphx_glr_run_chartOfNuclides_001.png
    :alt: Chart of the nuclides
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt

    from armi.nucDirectory import nuclideBases
    from armi import configure

    configure(permissive=True)

    xyc = []
    for name, base in nuclideBases.byName.items():
        if not base.a:
            continue
        xyc.append((base.a - base.z, base.z, base.abundance or 0.5))
    x, y, c = zip(*xyc)
    plt.figure(figsize=(12, 8))
    plt.scatter(x, y, c=c, marker="s", s=6)
    plt.title("Chart of the nuclides")
    plt.xlabel("Number of neutrons (N)")
    plt.ylabel("Number of protons (Z)")
    plt.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.244 seconds)


.. _sphx_glr_download_gallery_framework_run_chartOfNuclides.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: run_chartOfNuclides.py <run_chartOfNuclides.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: run_chartOfNuclides.ipynb <run_chartOfNuclides.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
